Fixed login & register layout issues

--- a/PropertyManagement.UI/src/styles.css
+++ b/PropertyManagement.UI/src/styles.css
@@ -23,4 +23,12 @@ body {
   overflow-y: auto;
   padding: 1rem;
   background-color: #fff;
+  padding: 1rem;
+}
+
+.page-center {
+  min-height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
